--- a/k8dash/DeploymentService.yml
+++ b/k8dash/DeploymentService.yml
@@ -1,21 +1,21 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: k8dash
+  name: skooner
   namespace: kube-system
 spec:
   replicas: 1
   selector:
     matchLabels:
-      k8s-app: k8dash
+      k8s-app: skooner
   template:
     metadata:
       labels:
-        k8s-app: k8dash
+        k8s-app: skooner
     spec:
       containers:
-      - name: k8dash
-        image: herbrandson/k8dash:latest
+      - name: skooner
+        image: ghcr.io/skooner-k8s/skooner:stable
         ports:
         - containerPort: 4654
         livenessProbe:
@@ -26,17 +26,17 @@ spec:
           initialDelaySeconds: 30
           timeoutSeconds: 30
       nodeSelector:
-        'kubernetes.io/os': linux
+        'beta.kubernetes.io/os': linux
 
 ---
 kind: Service
 apiVersion: v1
 metadata:
-  name: k8dash
+  name: skooner
   namespace: kube-system
 spec:
+  type: NodePort
   ports:
-    - port: 80
-      targetPort: 4654
+    - port: 4654
   selector:
-    k8s-app: k8dash
+    k8s-app: skooner
